fix: add a MongoDB script to initialize replica set

--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -117,6 +117,7 @@ services:
       nproc: 64000
     volumes:
       - ${MONGODB_DATA_HOST_PATH}:/data/db
+      - ./initialize-replica-set.mongodb:/usr/local/share/initialize-replica-set.mongodb:ro
 
   centrifugo-change-stream:
     image: ghcr.io/cailloumajor/centrifugo-change-stream:3.1.4
