fix: opcua-proxy needs to write rejected certs

--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -202,7 +202,7 @@ services:
       - private
     restart: unless-stopped
     volumes:
-      - ./opcua-proxy/pki:/pki:ro
+      - ./opcua-proxy/pki:/pki
   # {{ end }}
 
 networks:
