--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -1,5 +1,7 @@
 version: "3"
 
+name: digital-factory-stack
+
 services:
 
   docker-socket-proxy:
@@ -11,7 +13,7 @@ services:
     labels:
       dozzle.enable: true
     networks:
-      - private
+      - docker-api
     restart: unless-stopped
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -26,6 +28,7 @@ services:
       dozzle.enable: true
     networks:
       default:
+      docker-api:
       private:
       management:
         ipv4_address: 192.168.254.1
@@ -47,8 +50,10 @@ services:
       - DOZZLE_NO_ANALYTICS=true
     labels:
       traefik.enable: true
+      traefik.docker.network: digital-factory-stack_private
       traefik.http.routers.logging.rule: PathPrefix(`/logs/`) || Path(`/logs`)
     networks:
+      - docker-api
       - private
     restart: unless-stopped
     # Image does not contain `/etc/passwd`, so use numeric UID & GID
@@ -72,6 +77,7 @@ services:
     labels:
       dozzle.enable: true
       traefik.enable: true
+      traefik.docker.network: digital-factory-stack_private
       traefik.http.middlewares.centrifugo-stripprefix.stripprefix.prefixes: /centrifugo
       traefik.http.middlewares.centrifugo-stripprefix.stripprefix.forceslash: false
       traefik.http.routers.centrifugo.middlewares: centrifugo-stripprefix@docker
@@ -96,6 +102,7 @@ services:
     labels:
       dozzle.enable: true
       traefik.enable: true
+      traefik.docker.network: digital-factory-stack_private
       traefik.http.middlewares.influxdb-stripprefix.stripprefix.prefixes: /influxdb
       traefik.http.middlewares.influxdb-stripprefix.stripprefix.forceslash: false
       traefik.http.routers.influxdb.middlewares: influxdb-stripprefix@docker
@@ -150,6 +157,7 @@ services:
     labels:
       dozzle.enable: true
       traefik.enable: true
+      traefik.docker.network: digital-factory-stack_private
       traefik.http.middlewares.config-api-stripprefix.stripprefix.prefixes: /config-api
       traefik.http.middlewares.config-api-stripprefix.stripprefix.forceslash: false
       traefik.http.routers.config-api.middlewares: config-api-stripprefix@docker
@@ -163,6 +171,7 @@ services:
     labels:
       dozzle.enable: true
       traefik.enable: true
+      traefik.docker.network: digital-factory-stack_private
       traefik.http.routers.factory-frontend.rule: PathPrefix(`/`)
       traefik.http.routers.factory-frontend.priority: 1
       traefik.http.services.factory-frontend.loadbalancer.server.port: 8080
@@ -208,6 +217,8 @@ services:
 
 networks:
   private:
+  docker-api:
+    internal: true
   management:
     internal: true
     driver_opts:
