--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -48,6 +48,8 @@ services:
       - DOZZLE_BASE=/logs
       - DOZZLE_FILTER=label=dozzle.enable=true
       - DOZZLE_NO_ANALYTICS=true
+    healthcheck:
+      test: [ CMD, /dozzle, healthcheck ]
     labels:
       traefik.enable: true
       traefik.docker.network: digital-factory-stack_private
