fix: switch back to influx ping
use a default influx cli config, set with the same parameters as when
there is no config

--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -98,7 +98,7 @@ services:
     environment:
       - INFLUXD_REPORTING_DISABLED=true
     healthcheck:
-      test: curl -fsS http://127.0.0.1:8086/health || exit 1
+      test: influx ping || exit 1
       interval: 20s
       start_period: 1m
     labels:
