--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -98,7 +98,7 @@ services:
     environment:
       - INFLUXD_REPORTING_DISABLED=true
     healthcheck:
-      test: influx ping || exit 1
+      test: influx ping -c default || exit 1
       interval: 20s
       start_period: 1m
     labels:
