--- a/traefik.toml
+++ b/traefik.toml
@@ -14,5 +14,5 @@ level = "INFO"
 [ping]
 
 [providers.docker]
-endpoint = "tcp://docker-socket-proxy:2375"
+endpoint = "tcp://docker-proxy-reverse-proxy:2375"
 exposedByDefault = false
