--- a/traefik.toml
+++ b/traefik.toml
@@ -14,5 +14,6 @@ level = "INFO"
 [ping]
 
 [providers.docker]
+allowEmptyServices = true
 endpoint = "tcp://docker-proxy-reverse-proxy:2375"
 exposedByDefault = false
