--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,10 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[Caddyfile]
+indent_style = tab
+tab_width = 4
+
 [Makefile]
 indent_style = tab
 tab_width = 4
