ci: treat service images updates as fixes

--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,11 @@
   "extends": [
     "config:base"
   ],
-  "semanticCommits": "enabled"
+  "semanticCommits": "enabled",
+  "packageRules": [
+    {
+      "matchManagers": ["docker-compose"],
+      "semanticCommitType": "fix"
+    }
+  ]
 }
