fix: move pki directory to the project root

--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -209,7 +209,7 @@ services:
       - private
     restart: unless-stopped
     volumes:
-      - ./opcua-proxy/pki:/pki
+      - ./pki:/pki
   # {{ end }}
 
 networks:
