--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -175,8 +175,8 @@ services:
     volumes:
       - factory-frontend-static:/srv/www
 
-  mongodb-scraper:
-    image: ghcr.io/cailloumajor/mongodb-scraper:2.3.1
+  mongodb-influxdb:
+    image: ghcr.io/cailloumajor/mongodb-influxdb:3.0.0
     environment:
       - MONGODB_DATABASE=opcua
       - MONGODB_COLLECTION=data
